--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,12 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="/__/firebase/6.2.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#reserved-urls -->
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
 </body>
 </html>
